Fixed quote bd not showing

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -351,7 +351,7 @@ nav{
   margin-top: 32px;
   background-color: white;
   border-radius: 16px;
-  background-image: url('/assets/quote-bg.png');
+  background-image: url('./assets/quote-bg.png');
   background-repeat: no-repeat;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   padding: 48px 24px 48px 24px;
